// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleCarousel /> by default matches with snapshot 1`] = `
Array [
  <div
    className="sc-bwzfXH iKvhCm"
    id=""
    style={Object {}}
  >
    <div
      aria-hidden={false}
      aria-labelledby="carouselTab_0"
      id="carouselItem_0"
      role="tabpanel"
    >
      <p>
        Foo
      </p>
    </div>
    <div
      aria-hidden={true}
      aria-labelledby="carouselTab_1"
      id="carouselItem_1"
      role="tabpanel"
    >
      <p>
        Bar
      </p>
    </div>
  </div>,
  <div
    className="sc-htpNat LHKdQ"
    onKeyDown={[Function]}
    role="tablist"
    style={Object {}}
  >
    <button
      aria-controls="carouselItem_0"
      aria-selected={true}
      className="sc-bxivhb beKQj"
      id="carouselTab_0"
      onClick={[Function]}
      role="tab"
      style={Object {}}
      type="button"
    >
      <span
        className="sc-bdVaJa FAarz"
      >
        Page 1
      </span>
    </button>
    <button
      aria-controls="carouselItem_1"
      aria-selected={false}
      className="sc-bxivhb beKQj"
      id="carouselTab_1"
      onClick={[Function]}
      role="tab"
      style={Object {}}
      type="button"
    >
      <span
        className="sc-bdVaJa FAarz"
      >
        Page 2
      </span>
    </button>
  </div>,
]
`;

exports[`<SimpleCarousel /> with only one item matches with snapshot 1`] = `
<div
  className="sc-bwzfXH fDplRa"
  id=""
  style={Object {}}
>
  <div
    aria-hidden={false}
    aria-labelledby="carouselTab_0"
    id="carouselItem_0"
    role="tabpanel"
  >
    <p>
      Foo
    </p>
  </div>
</div>
`;

exports[`<SimpleCarousel /> with some props matches with snapshot 1`] = `
<div
  className="sc-bwzfXH fDplRa"
  id="simpleCarousel"
  style={Object {}}
>
  <div
    aria-hidden={false}
    aria-labelledby="simpleCarousel_carouselTab_0"
    id="simpleCarousel_carouselItem_0"
    role="tabpanel"
  >
    <p
      activePaginationColor="Custom active pagination color"
      paginationColor="Custom pagination color"
    >
      Foo
    </p>
  </div>
</div>
`;
